--- a/package/package.json
+++ b/package/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "ai-functions": "^0.1.3"
+    "ai-functions": "^0.1.3",
+    "openai": "^4.14.2"
   }
 }
