--- a/package/package.json
+++ b/package/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "AI-Powered Schemas from Schema.org.AI",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +23,7 @@
   },
   "dependencies": {
     "ai-functions": "^0.1.3",
+    "lodash-es": "^4.17.21",
     "openai": "^4.14.2"
   }
 }
